# dev-workspace-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
dev_workspace_mcp/: app.py  config.py  runtime.py
dev_workspace_mcp/cli/: __init__.py  json_output.py  main.py
dev_workspace_mcp/codegraph/: adapters.py  index_manager.py  models.py  providers.py  service.py  watcher_manager.py
dev_workspace_mcp/commands/: allowlist.py  jobs.py  presets.py  service.py
dev_workspace_mcp/files/: patching.py  service.py  validation.py
dev_workspace_mcp/github_tools/: __init__.py  service.py
dev_workspace_mcp/gittools/: service.py
dev_workspace_mcp/http_tools/: local_client.py
dev_workspace_mcp/mcp_server/: errors.py  result_envelope.py  server.py  tool_registry.py  transport_http.py  transport_stdio.py
dev_workspace_mcp/memory_index/: __init__.py  indexer.py  service.py  sqlite_store.py
dev_workspace_mcp/models/: codegraph.py  commands.py  common.py  connections.py  errors.py  files.py  git.py  github.py  (+7 more)
docs/: implementation-plan.md
tests/: conftest.py  test_app.py  test_cli.py  test_codegraph_path_safety.py  test_codegraph_provider_boundary.py  test_codegraph_tools.py  test_commands.py  test_config.py  test_connections.py  test_files.py  test_github_tools.py  test_gittools.py  test_http_and_probes.py  test_mcp_server.py  test_memory_index.py  test_memory_index_cli.py  test_memory_index_tools.py  test_project_bootstrap.py  test_project_snapshot.py  test_projects.py  test_services.py  test_state_docs.py  test_transport_http.py  test_transport_stdio.py
(+44 files in other folders)
