[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-workspace-mcp"
version = "0.1.0"
description = "Project-aware MCP server for remote coding agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Felix Cardix" }
]
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
dev-workspace-mcp = "dev_workspace_mcp.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dev_workspace_mcp*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
